Fix page spacing

--- a/src/footer.css
+++ b/src/footer.css
@@ -12,8 +12,7 @@
 }
 
 #flower-container {
-	width: 30%;
-	height: 80%;
+	width: 20%;
 	margin: auto;
 }
 
