--- a/src/main.css
+++ b/src/main.css
@@ -27,7 +27,6 @@ html{
 }
 
 .container {
-	padding: 10% 0 ;
 	-webkit-animation: fadein 3s; /* Safari, Chrome and Opera > 12.1 */
 	-moz-animation: fadein 3s; /* Firefox < 16 */
 	-ms-animation: fadein 3s; /* Internet Explorer */
@@ -63,6 +62,10 @@ a:hover, a:active {
 
 a.nolink{
 	border-bottom: none;
+}
+
+.header {
+	padding-top: 10%;
 }
 
 
